--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
+/* @font-face {
+  font-family: 'Futura PT';
+  src: local('Futura PT'), url(./fonts/FuturaPT.woff) format('woff');
+} */
