--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@
 }
 
 h1 {
-  font-family: Futura;
+  font-family: Futura PT Heavy;
   font-size: 120px;
   font-style: normal;
   font-variant: normal;
@@ -44,7 +44,7 @@ h1 {
 }
 
 h2 {
-  font-family: Futura;
+  font-family: Futura PT Heavy;
   font-size: 48px;
   font-style: normal;
   font-variant: small-caps;
@@ -55,7 +55,7 @@ h2 {
 }
 
 h3 {
-  font-family: Futura;
+  font-family: Futura PT Heavy;
   font-size: 22px;
   font-style: normal;
   font-variant: small-caps;
@@ -66,7 +66,7 @@ h3 {
 }
 
 h4 {
-  font-family: Futura;
+  font-family: Futura PT Demi;
   font-size: 12px;
   font-style: normal;
   font-variant: normal;
@@ -76,11 +76,8 @@ h4 {
 }
 
 p {
-  font-family: Futura;
-  font-size: 1.2em;
-  /* font-size: 0.8;
-  transform: scale(1, 1.2);
-  letter-spacing: 0.09em; */
+  font-family: Futura PT;
+  font-size: 1.5em;
   font-style: normal;
   font-variant: normal;
   font-weight: 100;
@@ -92,7 +89,7 @@ p {
 }
 
 blockquote {
-  font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+  font-family: Futura PT, "Trebuchet MS", Arial, sans-serif;
   font-size: 21px;
   font-style: normal;
   font-variant: normal;
@@ -101,7 +98,7 @@ blockquote {
 }
 
 pre {
-  font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+  font-family: Futura PT, "Trebuchet MS", Arial, sans-serif;
   font-size: 13px;
   font-style: normal;
   font-variant: normal;
@@ -114,7 +111,7 @@ pre {
 }
 
 a {
-  color: #ddd;
+  color: #a9a9a9;
   text-decoration: none;
 }
 
@@ -253,6 +250,7 @@ button a:hover {
 .images-wrap {
   flex: 1;
   display: flex;
+  border: 0.25em solid white;
 }
 
 .images-one img,
@@ -260,13 +258,15 @@ button a:hover {
 .images-five img {
   height: 70%;
   margin: auto;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 .images-two img,
 .images-four img {
+  max-width: 100%;
   height: 70vh;
   margin: auto;
+  object-fit: cover;
 }
 
 .black-wolf {
@@ -277,8 +277,8 @@ button a:hover {
   background-color: #9ad5e5;
 }
 
-.white-statue {
-  background-color: #ffffff;
+.ivy-galapagos {
+  /* background-color: #ffffff; */
   display: flex;
 }
 
@@ -293,6 +293,7 @@ button a:hover {
 .blue-morale {
   background-color: #15b9ba;
   display: flex;
+  max-width: 100%;
 }
 
 .teal-caution {
@@ -304,7 +305,8 @@ button a:hover {
 }
 
 .resume,
-.about {
+.about,
+.contact {
   display: flex;
   flex-direction: column;
   margin: 0em 7em 0em 7em;
@@ -384,4 +386,48 @@ button a:hover {
 .contact-button a:hover {
   order: 4;
   color: white;
+}
+
+.contact p {
+  order: 1;
+  margin: auto;
+  margin-top: 3em;
+  margin-bottom: 3em;
+}
+
+.contact form {
+  order: 2;
+  margin: auto;
+  min-width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+
+.contact button {
+  margin-top: 4em;
+  margin-bottom: 4em;
+}
+
+.ivy-galapagos-container {
+  text-align: center;
+}
+
+.ivy-galapagos-text {
+  max-width: 50%;
+  margin-top: 4em;
+  margin-bottom: 4em;
+  -moz-box-shadow: 5px 6px 6px 0px #ccc;
+  -webkit-box-shadow: 5px 6px 6px 0px #ccc;
+  box-shadow: 5px 6px 6px 0px #ccc;
+}
+
+.footer {
+  background-color: black;
+  margin-top: 4em;
+  min-height: 10em;
+  display: flex;
+}
+
+.footer p {
+  margin: auto;
 }
