--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,35 @@ code {
     monospace;
 }
 
-
 /* @font-face {
-  font-family: 'Futura PT';
-  src: local('Futura PT'), url(./fonts/FuturaPT.woff) format('woff');
+  font-family: "Futura PT";
+  font-style: normal;
+  src: local("Futura PT"), url(./fonts/futura-pt.woff) format("woff");
 } */
+
+@font-face {
+  font-family: "Futura PT Heavy";
+  src: url("./fonts/futurapt-heavy.eot"); /* IE9 Compat Modes */
+  src: url("./fonts/futurapt-heavy.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("./fonts/futurapt-heavy.woff") format("woff"),
+    /* Pretty Modern Browsers */ url("./fonts/futurapt-heavy.ttf")
+      format("truetype"); /* Safari, Android, iOS */
+}
+
+@font-face {
+  font-family: "Futura PT Demi";
+  src: url("./fonts/FuturaPT-Demi.eot"); /* IE9 Compat Modes */
+  src: url("./fonts/FuturaPT-Demi.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("./fonts/FuturaPT-Demi.woff") format("woff"),
+    /* Pretty Modern Browsers */ url("./fonts/FuturaPT-Demi.ttf")
+      format("truetype"); /* Safari, Android, iOS */
+}
+
+@font-face {
+  font-family: "Futura PT";
+  src: url("./fonts/futurapt-book.eot"); /* IE9 Compat Modes */
+  src: url("./fonts/futurapt-book.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("./fonts/futurapt-book.woff") format("woff"),
+    /* Pretty Modern Browsers */ url("./fonts/futurapt-book.ttf")
+      format("truetype"); /* Safari, Android, iOS */
+}
