--- a/src/App.css
+++ b/src/App.css
@@ -438,10 +438,16 @@ textarea {
 .footer {
   background-color: black;
   margin-top: 4em;
-  min-height: 10em;
+  height: 10em;
   display: flex;
 }
 
-.footer p {
+.footer-socials {
   margin: auto;
+}
+
+.footer img {
+  width: 50px;
+  height: auto;
+  padding: 0em 2em 0em 2em;
 }
