--- a/src/App.css
+++ b/src/App.css
@@ -156,6 +156,12 @@ button a:hover {
   color: white;
 }
 
+.shadow {
+  -moz-box-shadow: 5px 6px 6px 0px #ccc;
+  -webkit-box-shadow: 5px 6px 6px 0px #ccc;
+  box-shadow: 5px 6px 6px 0px #ccc;
+}
+
 .navbar {
   display: flex;
   height: 7em;
@@ -307,8 +313,10 @@ button a:hover {
   max-width: 100%;
 }
 
-.teal-caution {
-  background-color: #9fceba;
+.hyperfundit-color {
+  /* background-color: #9fceba; */
+  min-height: 100%;
+  object-fit: cover;
 }
 
 .white-xray {
@@ -458,20 +466,31 @@ textarea {
 }
 
 .ivy-galapagos-container {
+  margin-top: 4em;
+  margin-bottom: 4em;
   text-align: center;
 }
 
 .ivy-galapagos-text {
   max-width: 50%;
+}
+
+.hyperfundit-business-container {
   margin-top: 4em;
-  margin-bottom: 4em;
-  -moz-box-shadow: 5px 6px 6px 0px #ccc;
-  -webkit-box-shadow: 5px 6px 6px 0px #ccc;
-  box-shadow: 5px 6px 6px 0px #ccc;
+  display: flex;
+  flex-direction: column;
+}
+
+.hyperfundit-business-container img {
+  max-width: 50%;
+  margin: auto;
+  margin-top: 2em;
+  margin-bottom: 2em;
 }
 
 .footer {
   background-color: black;
+  min-width: 100%;
   margin-top: 4em;
   height: 10em;
   display: flex;
