--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ h2 {
   font-family: Futura PT Heavy;
   font-size: 48px;
   font-style: normal;
-  font-variant: small-caps;
+  font-variant: normal;
   font-weight: 700;
   letter-spacing: 0em;
   line-height: 1.25em;
@@ -58,7 +58,7 @@ h3 {
   font-family: Futura PT Heavy;
   font-size: 22px;
   font-style: normal;
-  font-variant: small-caps;
+  font-variant: normal;
   font-weight: 700;
   letter-spacing: 0.25em;
   line-height: 1.2em;
@@ -127,11 +127,11 @@ a {
 }
 
 a:hover {
-  color: #000;
+  color: black;
 }
 
 .currentLink {
-  color: #000;
+  color: black;
 }
 
 button {
@@ -390,6 +390,22 @@ button a:hover {
   color: grey;
 }
 
+.resume-button {
+  order: 5;
+  margin: auto;
+  margin-top: 4em;
+  margin-bottom: 4em;
+}
+
+.full-resume-container {
+  margin-bottom: -5em;
+}
+
+.full-resume {
+  width: 100%;
+  height: 73.5em;
+}
+
 .about img {
   order: 1;
   max-width: 100%;
@@ -436,6 +452,10 @@ button a:hover {
   margin: auto;
   margin-top: 3em;
   margin-bottom: 3em;
+}
+
+.contact p a {
+  color: #8781bd
 }
 
 .contact form {
