--- a/src/App.css
+++ b/src/App.css
@@ -552,3 +552,213 @@ textarea {
   height: auto;
   padding: 0em 2em 0em 2em;
 }
+
+@media (max-width: 900px) {
+  html,
+  body {
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    /* overflow-x: hidden; */
+  }
+
+  .navbar-mid {
+    display: none;
+  }
+
+  .navbar-left p {
+    padding-left: 0.5em;
+  }
+
+  .navbar-right p {
+    padding-right: 0.5em;
+  }
+
+  /* .images-container {
+    order: 2;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+  } */
+
+  .images-one,
+  .images-three,
+  .images-five {
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+    padding: 0em;
+  }
+
+  .images-one a,
+  .images-three a,
+  .images-five a {
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 50vh;
+  }
+
+  .images-two,
+  .images-four {
+    width: 100vw;
+    height: 50vh;
+    padding: 0em;
+  }
+
+  .images-one {
+    order: 1;
+  }
+
+  .images-two {
+    order: 2;
+  }
+
+  .images-three {
+    order: 3;
+  }
+
+  .images-four {
+    order: 4;
+  }
+
+  .images-five {
+    order: 5;
+  }
+
+  .images-odd-left,
+  .images-odd-right {
+    width: 100%;
+    height: 50vh;
+    flex: 1;
+    margin: auto;
+    object-fit: cover;
+  }
+
+  .images-odd-left {
+    padding-right: 0em;
+  }
+
+  .images-odd-right {
+    padding-left: 0em;
+  }
+
+  .images-even-center {
+    width: 100%;
+    height: 50vh;
+    margin: auto;
+    object-fit: cover;
+  }
+
+  .overlay {
+    position: absolute;
+    width: 100vw;
+    height: 50vh;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+  }
+
+  .overlay-full {
+    width: 100vw;
+    display: none;
+  }
+
+  .overlay h2 {
+    margin: auto;
+    color: white;
+    margin-right: 0em;
+    margin-left: 0em;
+    text-align: center;
+    display: none;
+  }
+
+  .overlay .smaller-h2 {
+    margin: auto;
+    font-size: 38px;
+    text-align: center;
+    display: none;
+  }
+
+  .overlay h2 img {
+    width: 0.75em;
+    height: 0.75em;
+    display: none;
+  }
+
+  .resume,
+  .about,
+  .contact {
+    display: flex;
+    flex-direction: column;
+    margin: 1em;
+  }
+
+  .resume-one,
+  .resume-two,
+  .resume-three,
+  .resume-four {
+    flex: 1;
+    display: flex;
+    padding-bottom: 5em;
+  }
+
+  .banner-small {
+    display: none;
+  }
+
+  .about img {
+    order: 1;
+    max-width: 100%;
+    object-fit: contain;
+  }
+
+  .about blockquote {
+    order: 2;
+  }
+
+  .about-text {
+    order: 3;
+    margin: auto;
+    max-width: 90%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .about-text h2 {
+    margin: auto;
+    margin-top: 1.5em;
+    margin-bottom: 1.5em;
+  }
+
+  .about-text p {
+    margin: auto;
+    margin-bottom: -1em;
+  }
+
+  .ivy-galapagos-container,
+.ivy-summer-container {
+  margin-top: 1em;
+  margin-bottom: 1em;
+  text-align: center;
+}
+
+.ivy-galapagos-text,
+.ivy-summer-text {
+  max-width: 100%;
+}
+
+.hyperfundit-business-container {
+  margin-top: 1em;
+  display: flex;
+  flex-direction: column;
+}
+
+.hyperfundit-business-container img {
+  max-width: 100%;
+  margin: auto;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+}
